[package]
name = "forwardhook"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
description = "A simple webhook forwarder"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["fs", "macros"] }
warp = { version = "0.2", default-features = false }
